tests/src/test/resources/scala/tools/nsc/effects/io/ClassesSuite-files/selfNeg.check
newSource:11: error: not found: value self
    override def readOnly: S[A] = self.readOnly
                                  ^
newSource:26: error: not found: value self
    override def readOnly: S[A] = self.readOnly
                                  ^
